# diplom

./: 1.c  README.md
creeping/: .gitignore  123456st.clf  Makefile.am  Test.clf  base_window.cpp  base_window.h  configure.in  creeping.cpp  creeping.h  creeping.sh  cthread.cpp  cthread.h  debug_utils.h  file_reader.cpp  file_reader.h  font_render.cpp  font_render.h  indent-all.sh  main.cpp  message_reader.cpp  message_reader.h  sh_build  sh_build_linux  utils.cpp  utils.h
creeping/backends/: egl_window.cpp  egl_window.h  gles_window.cpp  gles_window.h  sdl_window.cpp  sdl_window.h  window_platform_wrapper.cpp  window_platform_wrapper.h  window_platform_wrapper.h.gch
creeping/fonts/: fonts.conf
creeping/fonts/ttf/TTF/: fonts.dir
creeping/utf8cpp/: readme
window_manager/: CreepingLine.vcxproj - Shortcut.lnk
window_manager/Binaries/Release/: CustomResolution.exp  CustomResolution.lib
window_manager/CreepingLine/: BitmapBuf.cpp  BitmapBuf.h  CreepingLine-eng.aps  CreepingLine-eng.rc  CreepingLine-rus.rc  CreepingLine.cpp  CreepingLine.dsp  CreepingLine.dsw  CreepingLine.h  CreepingLine.rc  CreepingLine.reg  CreepingLine.sln  CreepingLine.vcxproj  CreepingLine.vcxproj.filters  CreepingLineDoc.cpp  CreepingLineDoc.h  CreepingLineView.cpp  CreepingLineView.h  CreepingLineWnd.cpp  CreepingLineWnd.h  LinePropertyPageFont.cpp  LinePropertyPageFont.h  LinePropertyPageGeneral.cpp  LinePropertyPageGeneral.h  LinePropertyPagePosition.cpp  LinePropertyPagePosition.h  LinePropertyPageWindow.cpp  LinePropertyPageWindow.h  LinePropertySheet.cpp  LinePropertySheet.h  MainFrm.cpp  MainFrm.h  MyTracker.cpp  MyTracker.h  NetCommanProtocol.h  StdAfx.cpp  StdAfx.h  WindowPositionControl.cpp  WindowPositionControl.h  html2txt.cpp  (+4 more)
window_manager/CreepingLine/res/: CreepingLine.rc2
window_manager/CustomResolution/: CustomResolution.cpp  CustomResolution.def  CustomResolution.dsp  CustomResolution.h  CustomResolution.rc  CustomResolution.vcxproj  CustomResolution.vcxproj.filters  CustomResolutionDefs.h  CustomResolutionDialog.cpp  CustomResolutionDialog.h  MonCustomRes.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h  resource_ex.h
window_manager/CustomResolution/res/: CustomResolution.rc2
window_manager/Inc/: ApplicaServer.h  CLIENT.H  CLIENT_demo.H  CommonApi.h  KEYERROR.H  PresenterGlobals.h  PresenterRegistry.h  RCGrandDogW32.h  applica.h  debug.h  hasp_hl.h  keylok.h  product.h  products.inc  types.h
window_manager/Libs/: .gitignore  ApplicaInfo.cpp  ApplicaInfo.h  Bitmap.cpp  Bitmap.h  BitmapEx.cpp  BitmapEx.h  BrowseForFolder.cpp  BrowseForFolder.h  CBase64.cpp  CBase64.h  CImg.h  CLua.cpp  CLua.h  Channel.cpp  Channel.h  ChannelReader.cpp  ChannelReader.h  ChannelWriter.cpp  ChannelWriter.h  ColorBox.h  ComString.cpp  ComString.h  CommandLineParser.cpp  CommandLineParser.h  ConnectSock.cpp  ConnectSock.h  CreepingLineInfo.cpp  CreepingLineInfo.h  CritSect.cpp  CritSect.h  Cursor.cpp  Cursor.h  DocHostSite.cpp  ErrorMessageDlg.cpp  ErrorMessageDlg.h  ExecuteProcess.cpp  ExecuteProcess.h  FileHelpers.cpp  FileHelpers.h  (+178 more)
window_manager/Libs/CxImage/: .gitignore
window_manager/Libs/CxImage/CxImage/: cximage.dsp  cximage.vcxproj  cximage.vcxproj.filters
window_manager/Libs/CxImage/CxImage/CxImageDLL/: CxImageCrtDll.dsp  cximagemfcdll.dsp
window_manager/Libs/CxImage/jasper/: jasper.dsp  jasper.vcxproj  jasper.vcxproj.filters
window_manager/Libs/CxImage/jbig/: jbig.dsp  jbig.vcxproj  jbig.vcxproj.filters
window_manager/Libs/CxImage/jpeg/: Jpeg.dsp  Jpeg.vcxproj
window_manager/Libs/CxImage/mng/: libmng_types.h  mng.dsp  mng.vcxproj  mng.vcxproj.filters
window_manager/Libs/CxImage/png/: png.dsp  png.vcxproj  png.vcxproj.filters
window_manager/Libs/CxImage/raw/: dcr.dsp  libdcr.dsp  libdcr.vcxproj  libdcr.vcxproj.filters
window_manager/Libs/CxImage/tiff/: Tiff.dsp  Tiff.vcxproj  Tiff.vcxproj.filters
window_manager/Libs/Lua/: lopcodes.c
window_manager/Libs/Ultimate_tool/: OXGridEdit.h  OXGridHdr.h  OXGridList.cpp  OXGridList.h  OXUxTheme.h
window_manager/Libs/appweb/: AppWebServer.cpp  AppWebServer.h
window_manager/Libs/appweb/include/appweb/: buildConfig.h  capi.dox  copyHandler.h  ejs.dox  esp.dox  espHandler.dox  http.dox  mpr.dox  mprOs.h
window_manager/Libs/appweb/lib/: libappweb.lib  libappwebStatic.lib  libejs.lib  libejsStatic.lib  libespStatic.lib  libmpr.lib  libmprStatic.lib  libmprTest.lib  libmprTestStatic.lib
window_manager/Libs/appweb/lib/modules/: libadminModule.lib  libauthModule.lib  libcapiModule.lib  libcgiModule.lib  libcopyModule.lib  libdirModule.lib  libegiModule.lib  libespModule.lib  libputModule.lib  libsslModule.lib  libuploadModule.lib
window_manager/Libs/appweb/web/: features.esp  inc.esp  inc.js  simple.esp  test.esp  test.php  uploadTest.php
window_manager/Libs/appweb/web/upload/: upload.esp  upload.html
window_manager/Libs/cppunit/: CompilerOutputter.h
window_manager/Libs/http/: http_data.h  http_reqsock.cpp  http_reqsock.h  http_request.cpp  http_request.h  http_srv.rc2  http_srv_res.h
window_manager/Libs/xdelta3/: xdelta3-blkcache.h  xdelta3-cfgs.h  xdelta3-decode.h  xdelta3-djw.h  xdelta3-fgk.h  xdelta3-hash.h  xdelta3-list.h  xdelta3-main.h  xdelta3-merge.h  xdelta3-python.h  xdelta3-second.h  xdelta3-test.h  xdelta3.c  xdelta3.h
