dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([creeping], [2.0], [yurand2@gmail.com])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CC
AC_PROG_CXX

PKG_CHECK_MODULES(GDK, [gdk-2.0])
AC_SUBST(GDK_CFLAGS)
AC_SUBST(GDK_LIBS)

PKG_CHECK_MODULES(GTHREAD, [gthread-2.0])
AC_SUBST(GTHREAD_CFLAGS)
AC_SUBST(GTHREAD_LIBS)


PKG_CHECK_MODULES([EGL], [sdl2 >= 1])
AC_SUBST(EGL_CFLAGS)
AC_SUBST(EGL_LIBS)


PKG_CHECK_MODULES([PANGOFT2], [pangoft2 >= 1])
AC_SUBST(PANGOFT2_CFLAGS)
AC_SUBST(PANGOFT2_LIBS)


dnl AC_CHECK_HEADER([curl/curl.h],,
dnl    AC_MSG_ERROR([unable to find libcurl header files]))
dnl AC_CHECK_LIB([curl], [curl_global_init],,
dnl      AC_MSG_ERROR([unable to link with libcurl]))

dnl AC_PATH_PROG([XML2_CONFIG], [xml2-config], [none])
dnl if test "x$XML2_CONFIG" = "xnone"; then
dnl 	AC_MSG_ERROR([xml2-config not found])
dnl fi

dnl CFLAGS="$CFLAGS `$XML2_CONFIG --cflags`"
dnl LIBS="$LIBS `$XML2_CONFIG --libs`"

dnl AC_PATH_PROG([XSLT_CONFIG], [xslt-config], [none])
dnl if test "x$XSLT_CONFIG" = "xnone"; then
dnl 	AC_MSG_ERROR([xslt-config not found])
dnl fi

dnl CFLAGS="$CFLAGS `$XSLT_CONFIG --cflags`"
dnl LIBS="$LIBS `$XSLT_CONFIG --libs`"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
